[update reponse, update follows users]
