# docs/swagger.yaml
@@ -176,8 +176,6 @@ paths:
       - users
   /users/{id}/follow:
     put:
-      consumes:
-      - application/json
       description: Follows a user profile by ID
       parameters:
       - description: userID
@@ -188,7 +186,7 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
+        "201":
           description: follow user successfully
           schema:
             type: string
@@ -199,6 +197,33 @@ paths:
           description: Not Found
           schema: {}
       summary: Follows a user
+      tags:
+      - users
+  /users/{id}/unfollow:
+    put:
+      consumes:
+      - application/json
+      description: Unfollows a user profile by ID
+      parameters:
+      - description: userID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: unfollow user successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+      summary: Unfollows a user
       tags:
       - users
   /users/activate/{token}:
